<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_nav">
    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.maulnad.moviecatalogue.ui.home.content.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.maulnad.moviecatalogue.ui.home.content.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvShow"
        android:name="com.maulnad.moviecatalogue.ui.home.content.tvshows.TvShowsFragment"
        android:label="@string/tv_shows"
        tools:layout="@layout/fragment_tv_shows"/>
</navigation>